[dmx] code improvements (#58)
* fix deprecations
* add null annotations
* fix spotless errors
* resolve imports
* fix other issues

Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>